:recycle: separate filters from header, correct place is with content, :bug: fix dark mode class not working

--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -49,7 +49,7 @@
         opacity: 0.5;
     }
 }
-.dark {
+:global(.dark) {
     .custom-input {
         color: $white;
         &::placeholder {
@@ -66,6 +66,9 @@
             color: $white;
             opacity: 0.5;
         }
+    }
+    .custom-checkbox {
+        color: $white;
     }
 }
 
@@ -91,7 +94,7 @@
     }
 }
 
-.dark {
+:global(.dark) {
     .secondary-btn {
         color: $white;
         background-color: rgba(255, 255, 255, 0.1);
